<resources>
    <string name="app_name">EasyPos</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="has_olvidado_tu_contrase_a">Has olvidado tu contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="enviar_recuperacion">Enviar Recuperacion</string>
    <string name="recupera_tu_contrase_a">Recupera tu contraseña</string>
    <string name="empresa">Empresa</string>
    <string name="repita_contrase_a">Repita Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
